@@ -18,7 +18,9 @@
 
 package org.apache.hadoop.hive.ql.parse;
 
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Set;
 
 import org.apache.commons.logging.Log;
@@ -40,6 +42,7 @@ public class QB {
   private int numSelDi = 0;
   private HashMap<String, String> aliasToTabs;
   private HashMap<String, QBExpr> aliasToSubq;
+  private List<String> aliases;
   private QBParseInfo qbp;
   private QBMetaData qbm;
   private QBJoinTree qbjoin;
@@ -65,6 +68,7 @@ public class QB {
   public QB(String outer_id, String alias, boolean isSubQ) {
     aliasToTabs = new HashMap<String, String>();
     aliasToSubq = new HashMap<String, QBExpr>();
+    aliases = new ArrayList<String>();
     if (alias != null) {
       alias = alias.toLowerCase();
     }
@@ -110,6 +114,12 @@ public class QB {
     aliasToSubq.put(alias.toLowerCase(), qbexpr);
   }
 
+  public void addAlias(String alias) {
+    if (!aliases.contains(alias.toLowerCase())) {
+      aliases.add(alias.toLowerCase());
+    }
+  }
+
   public String getId() {
     return id;
   }
@@ -136,6 +146,10 @@ public class QB {
 
   public Set<String> getTabAliases() {
     return aliasToTabs.keySet();
+  }
+
+  public List<String> getAliases() {
+    return aliases;
   }
 
   public QBExpr getSubqForAlias(String alias) {
