@@ -378,6 +378,10 @@ STAGE PLANS:
           outputColumnNames: _col0, _col1, _col4, _col5, _col8, _col9, _col12, _col13
           Select Operator
             expressions:
+                  expr: _col8
+                  type: string
+                  expr: _col9
+                  type: string
                   expr: _col0
                   type: string
                   expr: _col1
@@ -385,10 +389,6 @@ STAGE PLANS:
                   expr: _col4
                   type: string
                   expr: _col5
-                  type: string
-                  expr: _col8
-                  type: string
-                  expr: _col9
                   type: string
                   expr: _col12
                   type: string
@@ -426,4 +426,4 @@ POSTHOOK: Input: default@t2
 POSTHOOK: Input: default@t3
 POSTHOOK: Input: default@t4
 POSTHOOK: Output: file:/tmp/jsichi/hive_2010-08-26_16-06-51_531_8070318925118385343/-mr-10000
-2	22	2	12	2	12	2	12
+2	12	2	22	2	12	2	12
